--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
  <head>
-  <Title>Khaled Abdelghany Mohamed </title>
+  <title>Khaled Abdelghany Mohamed </title>
  </head>
  <body>
   <h1>This is header1</h1>
-  <he>This is header1</h2>
+  <h2>This is header1</h2>
  </body>
 
 </html>
